@@ -800,7 +800,7 @@ LLVMFuzzerInitialize(int *UNUSED(argc), char ***UNUSED(argv))
     arkime_parsers_init();
     arkime_session_init();
     arkime_plugins_load(config.plugins);
-    arkime_config_load_local_ips();
+    arkime_config_load_override_ips();
     arkime_rules_init();
     arkime_packet_batch_init(&batch);
     return 0;
@@ -896,7 +896,7 @@ int main(int argc, char **argv)
     arkime_parsers_init();
     arkime_session_init();
     arkime_plugins_load(config.plugins);
-    arkime_config_load_local_ips();
+    arkime_config_load_override_ips();
     arkime_rules_init();
     g_timeout_add(1, arkime_ready_gfunc, 0);
 
